--- a/CasaGrandeFrontEnd/Views/Consultas/PasarAsistenciasDelDia.cshtml
+++ b/CasaGrandeFrontEnd/Views/Consultas/PasarAsistenciasDelDia.cshtml
@@ -156,13 +156,13 @@
                                     <!-- Ícono de check para confirmar asistencia -->
                                     <a href="javascript:void(0);"
                                       class="text-danger mx-2"
-                                                  onclick="actualizarAsistenciaUsuario('@consulta.ID_Usuario' , 'Usuario', 'No Asiste')">
+                                      onclick="actualizarAsistenciaUsuario('@consulta.ID_Usuario' ,'Usuario','Asiste')">
                                       <i class="bi bi-x-circle"></i>
                                     </a>
                                     <!-- SVG de cruz para editar asistencia -->
                                     <a href="javascript:void(0);"
                                        class="text-success mx-2"
-                                                    onclick="actualizarAsistenciaUsuario('@consulta.ID_Usuario', 'Usuario', 'Asiste')">
+                                       onclick="abrirModalAsistencia(this)">
                                         <i class="bi bi-check2-circle"></i>
                                     </a>
                                 }
@@ -178,16 +178,17 @@
                                     }else
                                     {
 
-                                                    <!-- Ícono de check para confirmar asistencia -->
+                                                    
+                                                    <!-- SVG de cruz para editar asistencia --> 
                                                     <a href="javascript:void(0);"
                                                       class="text-danger mx-2"
-                                                                  onclick="actualizarAsistenciaUsuario('@consulta.ID_Usuario' , 'Usuario', 'No Asiste')">
+                                                        onclick="abrirModalAsistencia(this)">
                                                       <i class="bi bi-x-circle"></i>
                                                     </a>
-                                                    <!-- SVG de cruz para editar asistencia -->
+                                                    <!-- Ícono de check para confirmar asistencia -->
                                                     <a href="javascript:void(0);"
                                                        class="text-success mx-2"
-                                                                    onclick="actualizarAsistenciaUsuario('@consulta.ID_Usuario', 'Usuario', 'Asiste')">
+                                                                    onclick="actualizarAsistenciaUsuario('@consulta.ID_Usuario', 'Asiste', '')">
                                                         <i class="bi bi-check2-circle"></i>
                                                     </a> 
 
@@ -437,7 +438,7 @@ function actualizarAsistenciaUsuario(id, tipo, estado) {
     console.log('Parámetros:', { id, tipo, estado });
 
     $.ajax({
-        url: '/Consultas/ActualizarAsistenciaPut',
+            url: '/Consultas/ActualizarAsistenciaPost',
         type: 'POST',
         data: { id, tipo, estado },
         success: function(response) {
